<resources>
    <string name="app_name">Amazing Scoreboard</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="reset_scores_only">Reset Scores</string>
    <string name="reset_all_data">Reset All</string>
    <string name="zero">0</string>
    <string name="score_summary_subject">Report from %s</string>
    <string name="send_summary">Send report via</string>
    <string name="thank_you_message">Thank you for using %s!</string>
    <string name="set_as_score">Set as score</string>
    <string name="shuffle_description">Shuffle</string>
    <string name="reset_colors">Reset Colors</string>
    <string name="leaderboard_button">Leaderboard Button</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="player">Player</string>
    <string name="how_many_players">How many players?</string>
    <string name="leaderboard">Leaderboard</string>
</resources>