<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    style="?android:attr/buttonBarStyle">

    <Button
        android:id="@+id/reset_scores_button"
        style="?android:attr/buttonBarNegativeButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/reset_scores_only"/>

    <Button
        android:id="@+id/reset_colors"
        style="?android:attr/buttonBarNegativeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_colors" />

    <Button
        android:id="@+id/reset_all_data_button"
        style="?android:attr/buttonBarNegativeButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/reset_all_data"/>

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarNegativeButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/cancel"/>

</LinearLayout>