<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="232dp"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toStartOf="@+id/subtract_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name"
        tools:hint="0" />

    <ImageButton
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:tint="#FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/number_input"
        app:layout_constraintEnd_toEndOf="@+id/number_input"
        app:layout_constraintTop_toTopOf="@+id/number_input"
        app:srcCompat="@drawable/ic_clear" />

    <Button
        android:id="@+id/add_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="24sp"
        android:tint="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/number_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/number_input" />

    <Button
        android:id="@+id/subtract_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:textSize="24sp"
        android:tint="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/number_input"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="@+id/number_input" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_input" />

    <Button
        android:id="@+id/override_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_as_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_input" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Player Name" />

</androidx.constraintlayout.widget.ConstraintLayout>